added certs volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock  # So that Traefik can listen to the Docker events
       - ./traefik.toml:/traefik.toml
+      - ./certs/:/certs/
 
 networks:
   proxy:
