--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   reverse-proxy:
-    image: traefik
+    image: traefik:1.7
     restart: always
     networks:
       - proxy
