traefik v2 init commit

--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,9 @@ podName=traefik
 # VirtualHost address
 hostRule=traefik.docker.localhost
 
-# Dashboard user nad password
-tUser=admin
+# Login info, default login is admin/admin
+traefikUser=admin
 
-# create md5 password from 'htpasswd' command
-# default pass is 'admin'
-tMD5Pass=$apr1$ts.zAnW5$69kYwS08vpl8DWFikzMjg0
-
-# Time Zone
-timeZone=Asia/Jerusalem
+# use htpasswd to generate a new password
+# no need to escape $ signs
+traefikPass=$apr1$msmq9AAP$DIKMT4JdR8BDacpFKAo8Y.
